--- a/city.html
+++ b/city.html
@@ -6,7 +6,7 @@
 	<meta name="keywords" content="服务业人才网" />
 	<meta name="description" content="服务业人才网" />
 	<link rel="shortcut icon" href="static/img/favicon.ico" type="image/x-icon" />
-	<link rel="stylesheet" href="static/css/style.css" type="text/css" />
+	<link rel="stylesheet" href="static/css/city.css" type="text/css" />
 	<script type="text/javascript" src="static/js/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript">
 $(function(){
