用户中心修改

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="header">
 				<div class="logo">
 					<a href="#">
-						<img src="static/img/logo1.png" alt=""></a>
+						<img src="static/img/logo.png" alt=""></a>
 				</div>
 				<p class="fr reg">
 					ц╩спук╨её©
