--- a/usercenter/resume.html
+++ b/usercenter/resume.html
@@ -53,7 +53,7 @@
          <div class="header">
             <div class="logo">
                <a href="#">
-                  <img src="../static/img/logo1.png" alt=""></a>
+                  <img src="../static/img/logo.png" alt=""></a>
             </div>
             <div class="quick_menu">
                <ul>
@@ -186,14 +186,10 @@
                <div class="subsubNav">
                   <span class="b">编辑简历</span> <em>|</em>
                   <span>
-                     <a target="_blank" href="/resume/preview">预览简历</a>
+                     <a target="_blank" href="preview-resume.html">预览简历</a>
                   </span> <em>|</em>
                   <span>
-                     <a href="/resume/letter/index">求职信</a>
-                  </span>
-                  <em>|</em>
-                  <span>
-                     <a href="/buddy/buddycomment/index">评价管理</a>
+                     <a href="resume-message.html">求职信</a>
                   </span>
                </div>
               
