--- a/usercenter/resume.html
+++ b/usercenter/resume.html
@@ -28,11 +28,11 @@
     $("#back-to-top").hide();  
     $(window).scroll(function(){
       if ($(window).scrollTop()>100){
-      $("#back-to-top").fadeIn(600);
+      $("#back-to-top").fadeIn('fast');
       }
       else
       {
-      $("#back-to-top").fadeOut(600);
+      $("#back-to-top").fadeOut('fast');
       }
       });
       //返回顶部
@@ -949,7 +949,8 @@
    </div>
    <!-- 尾部结束 -->
 <div id="top">
-   <p id="back-to-top" style="display: block;"><a href="#top"><span></span></a></p>
+   <p id="back-to-top"><a href="#top">回到顶部</a></p>
+   <p id="feed-back"><a href="#">我要反馈</a></p>
 </div>
 </body>
 </html>
