我上传啦建逼

--- a/usercenter/resume.html
+++ b/usercenter/resume.html
@@ -184,7 +184,7 @@
                   </ul>
                </div>
                <div class="subsubNav">
-                  <span class="b">编辑简历</span> <em>|</em>
+                  <span class="b">简历管理</span> <em>|</em>
                   <span>
                      <a target="_blank" href="preview-resume.html">预览简历</a>
                   </span> <em>|</em>
