逗比徒弟，这是最新的

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	<script type="text/javascript" src="static/js/tytabs.jquery.min.js"></script>
 	<script type="text/javascript" src="static/js/jquery.flexslider-min.js"></script>
 	<script type="text/javascript" src="static/js/index.js"></script>
-
 </head>
 <body>
 	<div id="fullbg"></div>
@@ -24,9 +23,8 @@
 						<img src="static/img/logo.png" alt=""></a>
 				</div>
 				<p class="fr reg">
-					没有账号？
-					<a href="#rhis" onclick="showBg('dialog','dialog_content');">注册</a>
-
+					<a href="usercenter/register.html">用户注册</a>|
+					<a href="usercenter/HRregister.html">企业注册</a>
 				</p>
 			</div>
 		</div>
@@ -78,7 +76,7 @@
 					<div id="tabsholder">
 						<ul class="tabs">
 							<li id="tab1">个人登录</li>
-							<li id="tab2" style="background-color:#009933 ;">企业登录</li>
+							<li id="tab2">企业登录</li>
 
 						</ul>
 						<div class="contents marginbot">
@@ -91,7 +89,7 @@
 										<div class="tips">请填写手机号或邮箱地址</div>
 									</div>
 									<div class="input-w">
-										<div class="hd">密码：</div>
+										<div class="hd">用户密码：</div>
 										<input type="password" tips="" maxlength="20" class="l-input" name="password"> <em class="validation-icon"></em>
 
 									</div>
@@ -108,7 +106,7 @@
 
 									<p class="tc reg-w">
 										还没有服务业人才网账户？
-										<a href="#" class="reg-b">立即注册</a>
+										<a href="usercenter/register.html" class="reg-b">立即注册</a>
 									</p>
 
 								</form>
@@ -123,7 +121,7 @@
 										<div class="tips">请填写手机号或邮箱地址</div>
 									</div>
 									<div class="input-w">
-										<div class="hd">密码：</div>
+										<div class="hd">用户密码：</div>
 										<input type="password" tips="" maxlength="20" class="l-input" name="password">
 										<em class="validation-icon"></em>
 
@@ -140,7 +138,7 @@
 									</div>
 									<p class="tc reg-w">
 										还没有服务业人才网账户？
-										<a href="#" class="reg-b">立即注册</a>
+										<a href="usercenter/HRregister.html" class="reg-b">立即注册</a>
 									</p>
 								</form>
 							</div>
@@ -648,16 +646,9 @@
 	<!-- 内容end -->
 
 	<!-- 友情链接开始 -->
-
-	<div class="row mt20 w-box" id="tabsholder2">
-		<ul class="links tabs">
-			<li id="tabz1" class="current">友情链接</li>
-			<li id="tabz2">合作伙伴</li>
-
-		</ul>
-		<div class="p10">
-
-			<div class="l-content" id="contentz1">
+			<div class="flink row">
+				<h2><span>友情链接</span></h2>
+				<div class="p10">
 				<a target="_blank" title="乡巴佬下载" href="http://www.386w.com/">乡巴佬下载</a>
 				<a target="_blank" title="腾讯软件下载" href="http://pc.qq.com/">腾讯软件下载</a>
 				<a target="_blank" title="落吧书屋" href="http://www.luo8.com/">落吧书屋</a>
@@ -699,70 +690,37 @@
 				<a target="_blank" title="逆战" href="http://nz.tgbus.com/">逆战</a>
 				<a target="_blank" title="软件盒子" href="http://www.itopdog.cn/">软件盒子</a>
 				<a target="_blank" title="win7论坛" href="http://www.dxztc.com/">win7论坛</a>
-			</div>
-			<div class="l-content" id="contentz2">
-				<a target="_blank" title="乡巴佬下载" href="http://www.386w.com/">乡巴佬下载</a>
-				<a target="_blank" title="腾讯软件下载" href="http://pc.qq.com/">腾讯软件下载</a>
-				<a target="_blank" title="落吧书屋" href="http://www.luo8.com/">落吧书屋</a>
-				<a target="_blank" title="pp3电脑主题" href="http://www.pp3.cn">pp3电脑主题</a>
-				<a target="_blank" title="163免费网盘" href="http://www.163disk.com/">163免费网盘</a>
-				<a target="_blank" title="u盘启动盘" href="http://u.xinluobo.com/">u盘启动盘</a>
-				<a target="_blank" title="七彩空间" href="http://www.qicaispace.com/">七彩空间</a>
-				<a target="_blank" title="梦三国" href="http://msg.tgbus.com">梦三国</a>
-				<a target="_blank" title="周公解梦" href="http://www.jiemeng8.com/">周公解梦</a>
-				<a target="_blank" title="组词造句" href="http://www.xiaotongxing.net/">组词造句</a>
-				<a target="_blank" title="棋谱收藏站" href="http://game.onegreen.net/">棋谱收藏站</a>
-				<a target="_blank" title="繁体字转换器" href="http://www.fantizi5.com/">繁体字转换器</a>
-				<a target="_blank" title="街机游戏" href="http://game.onegreen.net/">街机游戏</a>
-				<a target="_blank" title="播放器之家" href="http://play.jb51.net/">播放器之家</a>
-				<a target="_blank" title="网页模板" href="http://www.cssmoban.com">网页模板</a>
-				<a target="_blank" title="win7系统下载" href="http://www.285868.com/">win7系统下载</a>
-				<a target="_blank" title="u盘修复工具" href="http://www.upantool.com/">u盘修复工具</a>
-				<a target="_blank" title="网络游戏论坛" href="http://dou.tgbus.com/">网络游戏论坛</a>
-				<a target="_blank" title="xp系统下载" href="http://www.xp74.com/">xp系统下载</a>
-				<a target="_blank" title="甜椒刷机" href="http://www.onekeyrom.com/">甜椒刷机</a>
-				<a target="_blank" title="个人简历" href="http://www.geren-jianli.com/">个人简历</a>
-				<a target="_blank" title="下载吧" href="http://www.xiazaiba.com/">下载吧</a>
-				<a target="_blank" title="我的异常网" href="http://www.myexception.cn/">我的异常网</a>
-				<a target="_blank" title="软件下载" href="http://www.cnzz.cc/">软件下载</a>
-				<a target="_blank" title="安卓游戏" href="http://android.9game.cn/">安卓游戏</a>
-				<a target="_blank" title="PPT模板下载" href="http://ppt.downhot.com/">PPT模板下载</a>
-				<a target="_blank" title="安卓软件下载" href="http://soft.anruan.com/">安卓软件下载</a>
-				<a target="_blank" title="qq个性签名" href="http://qianming.vipyl.com/">qq个性签名</a>
-				<a target="_blank" title="qq个性签名" href="http://www.111ttt.com/">交谊舞曲</a>
-			</div>
-
-		</div>
-	</div>
+				</div>
+			</div>			
 
 	<!-- 友情链接结束 -->
 
-	<!-- 尾部开始 -->
+	<!-- 尾部开始 -->	
 	<div class="footer">
-
+		<div class="clear row">
+			<div class="footertit f-contact">
+				<p>服务热线（免话费）</p>
+				<p class="f18"><b>400-88888888</b></p>
+				<p class="f12">工作日：9:00-19:00</p>
+			</div>
 		<p>
-
-			<a rel="nofollow" href="/support/about.html">关于本站</a>
-			<span>|</span>
-			<a rel="nofollow" href="/support/help.html">网站帮助</a>
-			<span>|</span>
-
-			<a rel="nofollow" href="/support/advertise.html">广告合作</a>
-			<span>|</span>
-			<a class="cur" href="/link/">友情链接</a>
-			<span>|</span>
-			<a href="/soft/">网站地图</a>
-			<span>|</span>
-			<a href="/sitemaps.xml">网站RSS</a>
-		</p>
+            <a href="">关于</a>&nbsp;|
+            <a href="">职位</a>&nbsp;|
+            <a href="">公司</a>&nbsp;|
+            <a href="">人才</a>&nbsp;|
+            <a href="">行业</a>&nbsp;|
+            <a href="">意见反馈</a>&nbsp;|
+            <a href="">服务与声明</a>
+        </p>
 		<p>
 			Copyright &copy; 2014 www.fwy.com All Rights Reserved ICP备xxxxxxxx号
 		</p>
+		</div>
 	</div>
-	<!-- 尾部结束 -->
+	<!-- 尾部结束 -->	
 
 	<!-- 注册遮罩层 -->
-	<div id="dialog">
+	<!-- <div id="dialog">
 		<div class="colsew">
 			<b class="logtit">注册</b>
 			<a onclick="closeBg();" class="colsebtn" href="#">X</a>
@@ -821,7 +779,12 @@
 			
 		</div>
 		
-	</div>
+	</div> -->
 	<!-- 注册遮罩层 -->
+	<div id="top">
+      <p id="back-to-top" style="border-bottom:1px solid #ddd;">
+        <a href="#top">回到顶部</a>
+      </p>
+    </div>
 </body>
 </html>
