--- a/usercenter/resume.html
+++ b/usercenter/resume.html
@@ -223,6 +223,10 @@
                                     <span class="true"></span>
                                     教育经历
                                  </dd>
+                                 <dd id="edu">
+                                    <span class="true"></span>
+                                    求职意愿
+                                 </dd>
                               </dl>
                               <dl class="item-list">
                                  <dd id="lang">
@@ -233,22 +237,7 @@
                                     <span class="true"></span>
                                     证书
                                  </dd>
-                                 <dd id="itskill">
-                                    <span class="true"></span>
-                                    IT技能
-                                 </dd>
-                                 <dd id="position">
-                                    <span class="true"></span>
-                                    校内职务
-                                 </dd>
-                                 <dd id="scholarship">
-                                    <span class="true"></span>
-                                    校内奖励
-                                 </dd>
-                                 <dd id="intern">
-                                    <span class="true"></span>
-                                    实习经历
-                                 </dd>
+
                                  <dd id="practice">
                                     <span class="true"></span>
                                     工作经历
@@ -257,22 +246,10 @@
                                     <span class="true"></span>
                                     项目经验
                                  </dd>
-                                 <dd id="training">
-                                    <span class="false">未添加</span>
-                                    培训经历
-                                 </dd>
-                                 <dd id="offer">
-                                    <span class="false">未添加</span>
-                                    求职经历
-                                 </dd>
                                  <dd id="other">
                                     <span class="true"></span>
                                     其他信息
-                                 </dd>
-                                 <dd id="affix">
-                                    <span class="false">未添加</span>
-                                    附件/作品
-                                 </dd>
+                                 </dd>                            
                                  <dt id="hidden" class="drag-model-tit hidden-list">隐藏的模块：</dt>
                               </dl>
                               <div class="bottom-bar">
@@ -302,7 +279,7 @@
                      <div class="item-section">
                         <div class="mask-area">
                            <h3>
-                              <a style="display: block;" href="#" class="edit-btn J_editBase" rel="base" itemtype="base" itemid="11392599">编辑</a>
+                              <a style="display: block;" href="#" class="edit-btn">编辑</a>
                               <span class="b f14">基本信息</span>
                            </h3>
                            <div class="item-bd">
@@ -376,7 +353,7 @@
                      <div class="item-section">
                         <div class="mask-area">
                            <h3>
-                              <a style="display: block;" href="#" class="edit-btn J_editBase" rel="contact" itemtype="contact">编辑</a>
+                              <a style="display: block;" href="#" class="edit-btn" rel="contact" itemtype="contact">编辑</a>
                               <span class="b f14">联系方式</span>
                            </h3>
                            <div class="item-bd">
@@ -518,7 +495,7 @@
                                             <td>
                                                <div style="width: 510px" class="break">
                                                   普通话等级证书，
-                          大学英语四级
+                                                  大学英语四级
                                                </div>
                                             </td>
                                          </tr>
@@ -529,178 +506,6 @@
                           </div>
                        </div>
                        <!-- 证书end -->
-                       <!-- 技能 -->
-                       <div class="item-section">
-                          <div class="mask-area">
-                             <h3>
-                                <a style="display: block;" href="#" class="edit-btn J_event" itemtype="itskill" rel="edit" maxnum="10">编辑</a>
-                                <span class="b f14">IT技能</span>
-                             </h3>
-                             <div class="item-bd">
-                                <div style="display: block;" id="itskill-info" class="info-area">
-
-                                   <table width="100%">
-                                      <colgroup>                 
-                                      <col width="90">                 
-                                      <col width="*"></colgroup>
-                                   <tbody class="table-list">
-                                      <input type="hidden" name="here">                 
-                                      <tr>
-                                         <th>精通的技能：</th>
-                                         <td>
-                                            <div style="width: 420px" class="break">
-                                               HTML，
-                                                    Dreamweaver
-                                            </div>
-                                         </td>
-                                      </tr>
-                                      <tr>
-                                         <th>熟悉的技能：</th>
-                                         <td>
-                                            <div style="width: 420px" class="break">
-                                             Word，
-                                              Excel，
-                                              PowerPoint，
-                                              PHP，
-                                              MySQL，
-                                              HTML，
-                                              CSS，
-                                              Dreamweaver，
-                                              JavaScript，
-                                              Photoshop
-                                            </div>
-                                         </td>
-                                      </tr>
-                                   </tbody>
-                                </table>
-                             </div>
-                          </div>
-                           </div>
-                       </div>
-                       <!-- 技能end -->
-                       <!-- 校内职务 -->
-                       <div class="item-section">
-                          <div class="mask-area">
-                             <h3>
-                                <a href="#" class="add-btn J_event" itemtype="position" rel="add" maxnum="10">添加</a>
-                                <span class="b f14">校内职务</span>
-                             </h3>
-                             <div class="item-bd">
-                                <div id="position-info" class="info-area">
-                                   <table width="100%">
-                                      <colgroup>                 
-                                      <col width="160">                 
-                                      <col width="155">                 
-                                      <col width="*">                 
-                                      <col width="65"></colgroup>
-                                   <thead>
-                                      <tr class="g9">
-                                         <td>职务名称</td>
-                                         <td>任职时间</td>
-                                         <td>学校</td>
-                                         <td></td>
-                                      </tr>
-                                   </thead>
-                                   <tbody class="table-list">
-                                      <tr>
-                                         <td>
-                                            <div class="break" style="width:102px">副班长</div>
-                                         </td>
-                                         <td>
-                                            2012-09
-                                            <span>至</span>
-                                            今
-                                         </td>
-                                         <td>
-                                            <div class="break" style="width:172px">嘉应学院</div>
-                                         </td>
-                                         <td class="padding">
-                                            <a href="#" rel="edit" itemtype="position" itemid="2338551" title="修改校内职务" class="edit t-color J_event">编辑</a>
-                                            <a href="#" rel="del" itemtype="position" itemid="2338551" class="del t-color J_event">删除</a>
-                                         </td>
-                                      </tr>
-                                   </tbody>
-                                </table>
-                             </div>
-                          </div>
-                           </div>
-                       </div>
-                       <!-- 校内职务end -->
-                       <!-- 奖励 -->
-                       <div class="item-section">
-                          <div class="mask-area">
-                             <h3>
-                                <a href="#" class="add-btn J_event" itemtype="scholarship" rel="add" maxnum="15">添加</a>
-                                <span class="b f14">校内奖励</span>
-                             </h3>
-                             <div class="item-bd">
-                                <div id="scholarship-info" class="info-area">
-                                   <table width="100%">
-                                      <colgroup>                 
-                                      <col width="160">                 
-                                      <col width="155">                 
-                                      <col width="*">                 
-                                      <col width="65"></colgroup>
-                                   <thead>
-                                      <tr class="g9">
-                                         <td>奖项名称</td>
-                                         <td>获得时间</td>
-                                         <td>学校</td>
-                                         <td></td>
-                                      </tr>
-                                   </thead>
-                                   <tbody class="table-list">
-                                      <tr>
-                                         <td>
-                                            <div class="break" style="width:130px">计算机学院优秀学生干部</div>
-                                         </td>
-                                         <td>2013-10</td>
-                                         <td>嘉应学院</td>
-                                         <td class="padding">
-                                            <a href="#" itemtype="scholarship" itemid="6094983" rel="edit" title="修改校内奖励" class="edit t-color J_event">编辑</a>
-                                            <a href="#" itemtype="scholarship" itemid="6094983" rel="del" class="del t-color J_event">删除</a>
-                                         </td>
-                                      </tr>
-                                      <tr>
-                                         <td>
-                                            <div class="break" style="width:130px">计算机学院优秀学生三等奖学金</div>
-                                         </td>
-                                         <td>2013-10</td>
-                                         <td>嘉应学院</td>
-                                         <td class="padding">
-                                            <a href="#" itemtype="scholarship" itemid="6094982" rel="edit" title="修改校内奖励" class="edit t-color J_event">编辑</a>
-                                            <a href="#" itemtype="scholarship" itemid="6094982" rel="del" class="del t-color J_event">删除</a>
-                                         </td>
-                                      </tr>
-                                      <tr>
-                                         <td>
-                                            <div class="break" style="width:130px">计算机学院优秀学生三等奖学金</div>
-                                         </td>
-                                         <td>2012-10</td>
-                                         <td>嘉应学院</td>
-                                         <td class="padding">
-                                            <a href="#" itemtype="scholarship" itemid="6094981" rel="edit" title="修改校内奖励" class="edit t-color J_event">编辑</a>
-                                            <a href="#" itemtype="scholarship" itemid="6094981" rel="del" class="del t-color J_event">删除</a>
-                                         </td>
-                                      </tr>
-                                      <tr>
-                                         <td>
-                                            <div class="break" style="width:130px">计算机学院优秀学生三等奖学金</div>
-                                         </td>
-                                         <td>2011-12</td>
-                                         <td>嘉应学院</td>
-                                         <td class="padding">
-                                            <a href="#" itemtype="scholarship" itemid="5023985" rel="edit" title="修改校内奖励" class="edit t-color J_event">编辑</a>
-                                            <a href="#" itemtype="scholarship" itemid="5023985" rel="del" class="del t-color J_event">删除</a>
-                                         </td>
-                                      </tr>
-                                   </tbody>
-                                </table>
-                             </div>
-                          </div>
-                        </div>
-                       </div>
-                       <!-- 奖励end -->
                        <!-- 工作经验 -->
                       <div class="item-section">
                          <div class="mask-area">
@@ -803,23 +608,6 @@
                          </div>
                       </div>
                       <!-- 项目经验 -->
-                      <!-- 培训经验 -->
-                      <div class="item-section">
-                         <div class="mask-area">
-                            <h3>
-                               <a href="#" class="add-btn J_event" itemtype="training" rel="add" maxnum="10">添加</a>
-                               <span class="b f14">培训经历</span>
-                            </h3>
-                            <div class="item-bd">
-                               <div id="training-info" class="info-area">
-                                  <div class="blank-area">
-                                     <p class="g9">相关的培训经历可以提高你的职场竞争力。</p>
-                                  </div>
-                               </div>
-                            </div>
-                         </div>
-                      </div>
-                      <!-- 培训经验 -->
                       <!-- 其他信息 -->
                       <div class="item-section">
                          <div class="mask-area">
@@ -904,23 +692,6 @@
                         </div>
                       </div>
                       <!-- 其他信息 -->
-                      <!-- 附件信息 -->
-                      <div class="item-section">
-                         <div class="mask-area">
-                            <h3>
-                               <a href="#" class="add-btn J_event" itemtype="affix" rel="add" maxnum="5">添加</a>
-                               <span class="b f14">附件/作品</span>
-                            </h3>
-                            <div class="item-bd">
-                               <div id="affix-info" class="info-area">
-                                  <div class="blank-area">
-                                     <p class="g9">你可以上传英文简历、设计的作品等。</p>
-                                  </div>
-                               </div>
-                            </div>
-                         </div>
-                      </div>
-                      <!-- 附件 -->
                   </div>
                   <!-- 右边简历结束 -->
                </div>
