--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</div>
 				<p class="fr reg">
 					<a href="usercenter/register.html">用户注册</a>|
-					<a href="usercenter/HRregister.html">企业注册</a>
+					<a href="HR/HRregister.html">企业注册</a>
 				</p>
 			</div>
 		</div>
